[package]
name = "carla_autoware_bridge_plus"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
carla = "0.5.0"
flume = "0.10.14"
futures = "0.3.25"
itertools = "0.10.5"
nalgebra = "0.31.4"
ndarray = "0.15.6"
noisy_float = "0.2.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
pid = "3.0.0"
r2r = "0.6.3"
tempfile = "3.3.0"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
carla-ackermann = { version = "0.1.0" }

[patch.crates-io]
r2r = { git = "https://github.com/jerry73204/r2r.git", rev = "6644562704a76b942e5bc11784240efc1dd24285" }
r2r_common = { git = "https://github.com/jerry73204/r2r.git", rev = "6644562704a76b942e5bc11784240efc1dd24285" }
r2r_rcl = { git = "https://github.com/jerry73204/r2r.git", rev = "6644562704a76b942e5bc11784240efc1dd24285" }
r2r_actions = { git = "https://github.com/jerry73204/r2r.git", rev = "6644562704a76b942e5bc11784240efc1dd24285" }
r2r_msg_gen = { git = "https://github.com/jerry73204/r2r.git", rev = "6644562704a76b942e5bc11784240efc1dd24285" }

carla = { path = "/home/aeon/repos/carla-rust/carla" }
carla-ackermann = { git = "https://github.com/NEWSLabNTU/carla-ackermann.git", rev = "ad7cfbfeb8dc0cd7572e8b72ac8a0f48d9e5571e" }
