<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_autoware_bridge_plus</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jerry73204@gmail.com">aeon</maintainer>
  <license>TODO: License declaration</license>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>carla_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <!-- <depend>autoware_common_msgs</depend> -->
  <!-- <depend>autoware_control_msgs</depend> -->
  <!-- <depend>autoware_localization_msgs</depend> -->
  <depend>autoware_map_msgs</depend>
  <!-- <depend>autoware_planning_msgs</depend> -->
  <!-- <depend>autoware_sensing_msgs</depend> -->
  <!-- <depend>tier4_api_msgs</depend> -->
  <!-- <depend>tier4_control_msgs</depend> -->
  <!-- <depend>tier4_debug_msgs</depend> -->
  <!-- <depend>tier4_external_api_msgs</depend> -->
  <!-- <depend>tier4_hmi_msgs</depend> -->
  <!-- <depend>tier4_localization_msgs</depend> -->
  <!-- <depend>tier4_perception_msgs</depend> -->
  <!-- <depend>tier4_planning_msgs</depend> -->
  <!-- <depend>tier4_rtc_msgs</depend> -->
  <!-- <depend>tier4_simulation_msgs</depend> -->
  <!-- <depend>tier4_system_msgs</depend> -->
  <!-- <depend>tier4_v2x_msgs</depend> -->
  <!-- <depend>derived_object_msgs</depend> -->
  <!-- <depend>ackermann_msgs</depend> -->

  <buildtool_depend>ament_cargo</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
